<resources>
    // Activity names
    <string name="app_name">Remora</string>
    <string name="app_resume">Suivi de production de chaussures orthopédiques</string>
    <string name="act_splash_name">Initialisation</string>
    <string name="act_add_prod_name">Valider une étape</string>
    <string name="act_preference">Préférences</string>

    <string name="support_email">vincent.durrmann@orange.fr</string>

    // Navigation bar
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_add_prod">Valider une étape</string>
    <string name="nav_operators">Opérateurs</string>
    <string name="nav_prod_step">Etapes</string>
    <string name="nav_preferences">Préférences</string>
    <string name="nav_patients">Patients</string>

    // Add production activity
    <string name="operator">Opérateur : </string>
    <string name="step">Etape : </string>
    <string name="patient">Patient : </string>
    <string name="folder">Dossier</string>
    <string name="no_patient">Pas de patient à ce numéro</string>
    <string name="prod_updated_ok">Etape validée</string>
    <string name="valip_step_history">Dernières étapes validées</string>

    <string name="addprod_cancel_last_step">Supprimer l\'étape</string>
    <string name="addprod_cancel_instr">Supprimer la dernière étape validée ?</string>
    <string name="last_history_removed">Etape supprimé</string>

    // Operator fragment
    <string name="ope_delete_title">Supprimer un opérateur</string>
    <string name="ope_delete_instr">Voulez-vous supprimer l\'opéraeur %1$s ?</string>
    <string name="ope_add_title">Ajouter un opérateur</string>

    // Production step fragment
    <string name="step_delete_title">Supprimer une étape</string>
    <string name="step_delete_insctr">Voulez-vous supprimer l\'étape %1$s ?</string>
    <string name="step_deleted_ok">Etape supprimée</string>
    <string name="step_add_title">Ajouter une étape</string>
    <string name="step_created_ok">Etape créée</string>

    // Patient fragment
    <string name="patient_steps">Etape courante :</string>

    // Common
    <string name="validate">Valider</string>
    <string name="ok">Ok</string>
    <string name="cancel">Annuler</string>
    <string name="save">Sauver</string>
    <string name="delete">Supprimer</string>
    <string name="an_error_occured">Un problème est survenu</string>
    <string name="add">Ajouter</string>
    <string name="test">Tester</string>

    //Preferences
    <string name="pref_server">Serveur</string>
    <string name="pref_server_summaray">Adresse du serveur où se trouve la base de donnée</string>
    <string name="pref_server_hint">xxx.xxx.x.x</string>
    <string name="pref_username">Utilisateur</string>
    <string name="pref_username_sumary">Nom de l\'utilisateur pour se connecter à la base de donnée</string>
    <string name="pref_password">Mot de passe</string>
    <string name="pref_password_sumary">Mot de passe pour se connecter à la base de donnée</string>
    <string name="pref_database">Base de donnée</string>
    <string name="pref_database_sumary">Nom de la base de donnée</string>
    <string name="pref_test_ok">La connection à la base de donnée est établie</string>
    <string name="pref_test_nok">Impossible de se connecter à la base de donnée</string>

    <string name="pref_error">Impossible de mettre à jour les données. Veuillez vérifier les préférences.</string>

    // Loading pop-ups
    <string name="load_wait">"Veuillez patienter"</string>
    <string name="load_load_data">"Chargement des données"</string>
    <string name="load_load_patients">"Chargement des patients"</string>

</resources>
