<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group_features">

        <item
            android:id="@+id/nav_add_prod"
            android:icon="@drawable/ic_menu_tick"
            android:title="@string/nav_add_prod" />

        <item
            android:id="@+id/nav_operators"
            android:icon="@drawable/ic_menu_people"
            android:title="@string/nav_operators" />

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group_settings">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_gear"
            android:title="@string/nav_preferences" />


    </group>

</menu>